fix text align

--- a/style.scss
+++ b/style.scss
@@ -509,6 +509,7 @@ nav {
 
   > .prevpost {
     float: left;
+    text-align: left;
     width: 50%;
     a {
       margin: 3px 3px 3px 0;
